[package]
name = "clock-check"
version = "0.1.0"
authors = ["Filip Troníček <filip.tronicek@seznam.cz>"]
license = "MIT"
description = "A tool for getting your system clock precision"
readme = "README.md"
homepage = "https://github.com/filiptronicek/time-server-rust"
repository = "https://github.com/filiptronicek/time-server-rust"
keywords = ["cli", "time"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["cargo", "derive"] }