[package]
name = "time_server_utils"
version = "0.1.0"
edition = "2021"
description = "Utilities for the time server project"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]